Kubernetes/K3S/Homepage/homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: private
  labels:
    app.kubernetes.io/name: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage-sa
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: homepage
          image: "ghcr.io/gethomepage/homepage:v0.8.13"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: homepage-cm-volume
              mountPath: /app/config/custom.js
              subPath: custom.js
            - name: homepage-cm-volume
              mountPath: /app/config/custom.css
              subPath: custom.css
            - name: homepage-cm-volume
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: homepage-cm-volume
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
            - name: homepage-cm-volume
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
            - name: homepage-cm-volume
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: homepage-cm-volume
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: homepage-cm-volume
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: homepage-logs-volume
              mountPath: /app/config/logs
      volumes:
        - name: homepage-cm-volume
          configMap:
            name: homepage-cm
        - name: homepage-logs-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  namespace: private
  labels:
    app.kubernetes.io/name: homepage
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app.kubernetes.io/name: homepage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-http
  namespace: private
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-svc
                port:
                  number: 3000
